fixed issues with layout display while on mobile and minor changes to desktop view

--- a/css/footer.css
+++ b/css/footer.css
@@ -41,3 +41,8 @@ footer {
     text-decoration: none;
     color: black;
 }
+
+footer + * {
+    margin-top: 0;
+    padding-top: 0;
+  }
