--- a/css/style2.css
+++ b/css/style2.css
@@ -1,16 +1,9 @@
 .hero2 {
     padding: 10px;
+    text-align: center;
 }
 
-.hero__img {
-    border-radius: 50%;
-    width: 170px;
-    overflow: hidden;
-    position: relative;
-    top: -60px;
-}
-
-.hero__btns {
+.hero__buttons {
     margin-top: 10px;
     justify-content: space-around;
 }
@@ -89,15 +82,18 @@
     transform: scale(1.3);
 }
 
-/* description */
+@media only screen and (max-width: 450px) {
+    .activities__modules {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 
-.description__title {
-    margin-bottom: 15px;
-}
-
-.description__img {
-    max-width: 150px;
-    border-radius: 15%;
+    .activity {
+        width: 50%;
+        margin-bottom: 30px;
+    }
 }
 
 .how__it__works {
@@ -123,7 +119,7 @@
 }
 
 .hiw__card {
-    width: 80%;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -234,10 +230,24 @@
   }
 /* test */
 
+footer + * {
+    margin-top: 0;
+    padding-top: 0;
+  }
+
+  .carousel-bg{
+    margin-bottom: 0px;
+  }
+
 @media only screen and (min-width: 769px) {
 
     .hero2 {
         padding: 0 100px;
+    }
+
+    .hero__buttons {
+        justify-content: center;
+        gap: 50px;
     }
 
     .activities__modules {
